--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -499,6 +499,7 @@
                                                             FloatInput:
                                                                 id: thickness_g0
                                                                 disabled: phase_shift_g0.text or gi_geometry.text != 'free'
+                                                                on_text: root.on_grating_thickness('g0')
                                                         BoxLayout:
                                                             LabelHelp:
                                                                 text: 'Phase shift [rad]'
@@ -508,6 +509,7 @@
                                                                 size_hint_x: num_input_size*1.2
                                                                 values: ['pi', 'pi/2']
                                                                 on_text: root.on_phase_shift_spinner('g0')
+                                                                disabled: type_g0.text == 'abs'
                                                             FloatInput:
                                                                 id: phase_shift_g0
                                                                 size_hint_x: num_input_size*1.35
@@ -591,6 +593,7 @@
                                                             FloatInput:
                                                                 id: thickness_g1
                                                                 disabled: phase_shift_g1.text or gi_geometry.text != 'free'
+                                                                on_text: root.on_grating_thickness('g1')
                                                         BoxLayout:
                                                             LabelHelp:
                                                                 text: 'Phase shift [rad]'
@@ -600,6 +603,7 @@
                                                                 size_hint_x: num_input_size*1.2
                                                                 values: ['pi', 'pi/2']
                                                                 on_text: root.on_phase_shift_spinner('g1')
+                                                                disabled: type_g1.text == 'abs'
                                                             FloatInput:
                                                                 id: phase_shift_g1
                                                                 size_hint_x: num_input_size*1.35
@@ -683,6 +687,7 @@
                                                             FloatInput:
                                                                 id: thickness_g2
                                                                 disabled: phase_shift_g2.text or gi_geometry.text != 'free'
+                                                                on_text: root.on_grating_thickness('g2')
                                                         BoxLayout:
                                                             LabelHelp:
                                                                 text: 'Phase shift [rad]'
@@ -692,6 +697,7 @@
                                                                 size_hint_x: num_input_size*1.2
                                                                 values: ['pi', 'pi/2']
                                                                 on_text: root.on_phase_shift_spinner('g2')
+                                                                disabled: type_g2.text == 'abs'
                                                             FloatInput:
                                                                 id: phase_shift_g2
                                                                 size_hint_x: num_input_size*1.35
