source and detector displayed in geometry sketch

--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -824,7 +824,7 @@
                         Button:
                             text: 'Update sketch'
                             pos_hint: {'top': 0.3}
-                            on_press: geometry_sketch.update_geometry(dict())
+                            on_press: geometry_sketch.update_geometry(dict(), dict())
 
 
 
