--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -210,7 +210,7 @@
                         ScrollView:
                             FloatLayout:
                                 size_hint_y: None
-                                height: 1024
+                                height: 1200  # 1024
 
 
                                 # General input
@@ -433,7 +433,7 @@
                                 # Grating input
                                 GridLayout:
                                     cols: 1
-                                    pos_hint: {'top': 0.7}
+                                    pos_hint: {'top': 0.75}
 
 
                                     StackLayout:
@@ -806,7 +806,7 @@
                                 # Distances
                                 GridLayout:
                                     cols: 1
-                                    pos_hint: {'top': 0.2}
+                                    pos_hint: {'top': 0.275}
 
                                     Distances:
                                         id: distances
