--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -284,7 +284,7 @@
                                                     on_text: root.on_look_up_table()
                                             BoxLayout:
                                                 LabelHelp:
-                                                    text: 'Only consider photo-absorption'
+                                                    text: 'Photo-absorption only'
                                                     help_message: parser_info['photo_only'][1]
                                                 CheckBox:
                                                     id: photo_only
